--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,10 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.13'
+    
+    - name: Pull Mongo Docker
+      run: |
+            docker pull mongo
 
     - name: Test & Lint
       run: |
