--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,10 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: '1.13'
+    
+    - name: Pull Mongo Docker
+      run: |
+            docker pull mongo
 
     - name: Test & Lint
       run: |
@@ -22,19 +26,17 @@ jobs:
             test -z $(gofmt -s -l -w .)
       working-directory: ./api
       
-    - name: Authenticate GCP
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
-      with:
-        project_id: ${{ secrets.GCP_PROJECT_ID }}
-        service_account_key: ${{ secrets.GCP_SA_KEY }}
-        export_default_credentials: true
+    - name: Build
+      run: |
+            CGO_ENABLED=0 GOOS=linux go build -a -ldflags '-extldflags "-static"' -o ../main
+      working-directory: ./api/server
 
-    - name: Deploy orders
-      run: |
-            gcloud functions deploy orders --entry-point HandleOrders --runtime go113 --trigger-http
-      working-directory: ./api
-    
-    - name: Deploy website
-      run: |
-            gcloud functions deploy website --entry-point HandleWebsite --runtime go113 --trigger-http --set-env-vars ORDERS_API=https://us-central1-ordertest.cloudfunctions.net/orders
-      working-directory: ./api
+    - name: Azure Login
+      uses: azure/login@v1
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+    - name: Deploy Function
+      uses: Azure/functions-action@v1
+      with:
+        app-name: "order-test"
