--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,7 +36,15 @@ jobs:
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Deploy Function
-      uses: Azure/functions-action@v1
-      with:
-        app-name: "order-test"
+    - name: Install Function Core Tools
+      run: |
+            wget -q https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb
+            sudo dpkg -i packages-microsoft-prod.deb
+            sudo apt-get update
+            sudo apt-get install azure-functions-core-tools-3
+
+    - name: Deploy Functions
+      run: |
+            func azure functionapp publish order-test --custom
+      working-directory: ./api
+      
